unpackaged/main/default/objects/Roommate_Request__c/Roommate_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks roommate preference data captured in a VF page &amp; flow</description>
    <label>Roommate Request</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Roommate Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roommate Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>