unpackaged/main/default/objects/Roommate_Request__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Temporary field to hold large quantity of irregular data from CampusGroup version of the Roommate Request form.</description>
    <inlineHelpText>Temporary field to house irregular data from CampusGroup</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>