unpackaged/main/default/objects/Roommate_Request__c/fields/Email_Missing_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Missing_Enrollment_Id__c</fullName>
    <inlineHelpText>This field contains the student&#39;s email if their Roommate Request was not connected to their enrollment record</inlineHelpText>
    <label>Email Missing Enrollment Id</label>
    <type>Email</type>
</CustomField>