unpackaged/main/default/objects/Roommate_Request__c/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Roommate Requests</relationshipLabel>
    <relationshipName>Roommate_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>