unpackaged/main/default/objects/Roommate_Request__c/fields/Full_Name_Missing_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Missing_Enrollment_Id__c</fullName>
    <inlineHelpText>This field contains the First &amp; Last Names for students whose Enrollment Id was not connected to the Roommate Request record</inlineHelpText>
    <label>Full Name Missing Enrollment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>