unpackaged/main/default/objects/Roommate_Request__c/fields/Has_Roommate_Preference__c.field-meta.xml
<CustomField>
    <fullName>Has_Roommate_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Roommate Preference?</label>
    <type>Checkbox</type>
</CustomField>