unpackaged/main/default/objects/Roommate_Request__c/fields/Roomate_Preference_2_prefer_to_not_live__c.field-meta.xml
<CustomField>
    <fullName>Roomate_Preference_2_prefer_to_not_live__c</fullName>
    <label>Roomate Preference 2 (prefer to not live</label>
    <length>255</length>
    <type>Text</type>
</CustomField>