unpackaged/main/default/objects/Roommate_Request__c/fields/Roommate_Preference_2__c.field-meta.xml
<CustomField>
    <fullName>Roommate_Preference_2__c</fullName>
    <label>Roommate Preference 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>