unpackaged/main/default/objects/Roommate_Request__c/fields/Roommate_Preference_please_explain__c.field-meta.xml
<CustomField>
    <fullName>Roommate_Preference_please_explain__c</fullName>
    <label>Roommate Preference please explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>