unpackaged/main/default/objects/Roommate_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Id_Log__c</columns>
    <columns>Enrollment_Record__c</columns>
    <columns>Program_Id_Log__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>