unpackaged/main/default/objects/Roommate_Request__c/listViews/Roommate_Request.listView-meta.xml
<ListView>
    <fullName>Roommate_Request</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Enrollment_Record__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Roommate Request</label>
</ListView>